<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStory.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgV_preview"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="12dp"
                    android:contentDescription="@string/image_preview"
                    app:srcCompat="@drawable/ic_place_default_holder" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_gallery"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/gallery" />

                <Button
                    android:id="@+id/btn_camera_x"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:elevation="2dp"
                    android:scaleType="fitCenter"
                    android:text="@string/camera"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_preview" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:autofillHints="Your description"
                android:background="@drawable/border_corner_10"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minLines="4"
                android:padding="10dp"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_camera_x" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/et_description"
                app:layout_constraintTop_toBottomOf="@+id/et_description"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location_permission"
                    android:gravity="center"
                    android:layout_marginEnd="150dp"
                    android:layout_marginStart="38dp"
                    app:layout_constraintBottom_toBottomOf="@+id/switchCompat"
                    app:layout_constraintStart_toStartOf="@+id/et_description"
                    app:layout_constraintTop_toTopOf="@+id/switchCompat" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_location_permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/et_description"
                    app:layout_constraintTop_toBottomOf="@+id/et_description" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="60dp"
                android:text="@string/upload" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>