<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_photo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:layout_margin="8dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imgV_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/imgV_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/imgV_photo"
            tools:text="@string/photo_name" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:maxLines="3"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_name"
            card_view:layout_constraintStart_toStartOf="@+id/tv_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tv_created_a_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:maxLines="3"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_name"
            card_view:layout_constraintStart_toStartOf="@+id/tv_description"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_description"
            tools:text="@string/Create_at" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>